--- a/src/style.css
+++ b/src/style.css
@@ -31,7 +31,7 @@ header {
 }
 
 .search-form-button {
-  background: #885df1;
+  background: lawngreen;
   padding: 15px 30px;
   border: none;
   font-size: 16px;
