--- a/src/style.css
+++ b/src/style.css
@@ -107,6 +107,7 @@ main {
 .weather-forecast-temperatures {
   text-align: center;
   color: #f65282;
+  font-size: 22px;
   margin-top: 10px;
   display: flex;
   justify-content: center;
